# helang-plus-plus

./: CMakeLists.txt  README.md  build.bat
example/: fib.he  func.he  hello.he  hello_helang.he
src/: main.cpp
src/compiler/: compile.cpp
src/lib/: ast.cpp  ast.h  cmdline.cpp  cmdline.h  codegen.cpp  codegen.h  common.h  config.h  io.cpp  io.h  tokens.cpp  tokens.h
template/: io.c  main.c
